overflow fix

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@ body {
 	background-color: #f5f5f5;
 	color: #4c4c4c;
 	font-family: 'Avenir-Book', Helvetica, Arial, sans-serif;
+	overflow-x: hidden;
 }
 
 /*Custom Fonts*/
